k8s/ingress/ingress.yaml
# k8s/ingress/ingress.yaml
# Traefik Ingress (point d'entrée HTTP)

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: platform-ingress
  namespace: platform
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: platform.local         # En local : ajouter dans /etc/hosts
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
